# wwd

./: .gitignore  Cargo.toml  README.md  config.toml.example
src/: app.rs  config.rs  forecaster.rs  handlers.rs  helper.rs  main.rs
static/: main.css
templates/: index.hbs
