[package]
name = "wwd"
description = "A weekend weather dashboard"
version = "0.1.0"
authors = ["rob"]

[dependencies]
#darksky = { git = "https://github.com/zeyla/darksky.rs.git", rev = "1e693e6" }
darksky = { path = "/home/rob/src/darksky.rs" }
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
hyper = "0.10"
hyper-native-tls = "0.2"
chrono = "0.4.0"
termion = "1.5"
