[package]
name = "wwd"
description = "A weekend weather dashboard"
version = "0.1.0"
authors = ["rob"]

[dependencies]
darksky = "0.6"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hyper = "0.10"
hyper-native-tls = "0.2"
chrono = { version = "0.4", features = ["serde"] }
iron = "0.5"
handlebars-iron = "0.24"
router = "*"
logger = "*"
staticfile = "*"
mount = "*"
env_logger = "0.4"
log = "0.3"
tokio-core = "0.1"
tokio-timer = "0.1"
futures = "0.1"
